--- a/apps/website/src/pages/docs/pro/installation/private-npm/overview.mdx
+++ b/apps/website/src/pages/docs/pro/installation/private-npm/overview.mdx
@@ -3,6 +3,13 @@ title: Private NPM registry
 description: How to set up the private NPM registry with Saas UI Pro.
 ---
 
+<Info>
+  It is no longer necessary to use our private NPM registry to install Saas UI Pro.
+
+The Saas UI Pro packages are now published to the public NPM registry.
+
+</Info>
+
 All `@saas-ui-pro` packages can be installed from our private NPM registry.
 While the source code of these packages is included in the Saas UI Pro repository, you can use the private NPM registry to install them in existing projects.
 
