chore: fix blog

--- a/apps/website/content/blog/better-auth-authentication-provider.mdx
+++ b/apps/website/content/blog/better-auth-authentication-provider.mdx
@@ -1,8 +1,7 @@
 ---
 title: New Better Auth authentication integration
-date: '2025-01-18'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
+publishedAt: '2025-01-18'
+authors: ['eelco']
 description: A new authentication provider for our Next.js starter kit with better defaults and more customization options.
 ---
 
