--- a/apps/website/content/blog/introducing-charts-for-chakra-ui.mdx
+++ b/apps/website/content/blog/introducing-charts-for-chakra-ui.mdx
@@ -1,8 +1,7 @@
 ---
 title: Introducing 4 new Open Source data visualization components for Chakra UI.
-date: '2024-01-12'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
+publishedAt: '2024-01-12'
+authors: ['eelco']
 description: Build beautiful metrics dashboards faster with Area, Bar, Line and Sparkline charts for Chakra UI.
 ---
 
@@ -570,9 +569,9 @@ import {
   Card,
   CardBody,
   Stat,
-  StatLabel,
-  StatHelpText,
   StatArrow,
+  StatHelpText,
+  StatLabel,
   StatNumber,
 } from '@chakra-ui/react'
 import { Sparkline } from '@saas-ui/charts'
