--- a/apps/website/content/blog/introducing-glass-theme-for-chakra-ui.mdx
+++ b/apps/website/content/blog/introducing-glass-theme-for-chakra-ui.mdx
@@ -1,8 +1,7 @@
 ---
 title: Introducing the new Glass theme for Chakra UI
-date: '2022-12-12'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
+publishedAt: '2022-12-12'
+authors: ['eelco']
 description: Today I'm happy to announce that the new Glass theme for Chakra UI I've been working on is now available for download.
 ---
 
@@ -30,7 +29,7 @@ export const theme = extendTheme(
   {
     // your overrides
   },
-  baseTheme
+  baseTheme,
 )
 ```
 
