--- a/apps/website/content/blog/introducing-kanban-primitives.mdx
+++ b/apps/website/content/blog/introducing-kanban-primitives.mdx
@@ -1,8 +1,7 @@
 ---
 title: Introducing Kanban primitives
-date: '2023-10-06'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
+publishedAt: '2023-10-06'
+authors: ['eelco']
 description: Build interactive Kanban boards with Saas UI Pro
 ---
 
@@ -32,9 +31,13 @@ You can see the Kanboard in action on the contacts page of the [Saas UI Pro demo
     Kanban primitives and Kanban Board (
     <a href="https://twitter.com/tan_stack?ref_src=twsrc%5Etfw">@tan_stack</a>{' '}
     Table integration) are now available in Saas UI Pro 🤩
-    <a href="https://t.co/Qnfip5YfMg">https://t.co/Qnfip5YfMg</a> <a href="https://t.co/eiUF3D1oDU">pic.twitter.com/eiUF3D1oDU</a>
+    <a href="https://t.co/Qnfip5YfMg">https://t.co/Qnfip5YfMg</a>{' '}
+    <a href="https://t.co/eiUF3D1oDU">pic.twitter.com/eiUF3D1oDU</a>
   </p>
-  &mdash; Saas UI (@saas_js) <a href="https://twitter.com/saas_js/status/1703067566497800569?ref_src=twsrc%5Etfw">September 16, 2023</a>
+  &mdash; Saas UI (@saas_js){' '}
+  <a href="https://twitter.com/saas_js/status/1703067566497800569?ref_src=twsrc%5Etfw">
+    September 16, 2023
+  </a>
 </Tweet>
 
 ## Live Example
