--- a/apps/website/content/blog/introduction.mdx
+++ b/apps/website/content/blog/introduction.mdx
@@ -1,9 +1,7 @@
 ---
 title: Say hello to Saas UI
-date: '2022-01-27'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
-status: published
+publishedAt: '2022-01-27'
+authors: ['eelco']
 description: I'm proud to introduce you to Saas UI, an advanced component library built on top of Chakra UI.
 ---
 
