--- a/apps/website/content/blog/lessons-learned-building-saas-frontends.draft.mdx
+++ b/apps/website/content/blog/lessons-learned-building-saas-frontends.draft.mdx
@@ -1,9 +1,7 @@
 ---
 title: Lessons learned from building SaaS frontends
-date: '2022-01-18'
-author: Eelco Wiersma
-avatar: eelco180.jpg
-status: draft
+publishedAt: '2022-01-18'
+authors: ['eelco']
 ---
 
 For the past 8 years I've worked for a hand full of startups, including my own. Most failed,
