--- a/apps/website/content/blog/nextjs-create-page-helper-with-loader-pattern.mdx
+++ b/apps/website/content/blog/nextjs-create-page-helper-with-loader-pattern.mdx
@@ -1,9 +1,8 @@
 ---
-author: 'Eelco Wiersma'
-avatar: /eelco128.jpg
+authors: ['eelco']
 title: 'Next.js createPage helper with loader pattern'
 description: "This Next.js pattern I've been using just got a whole lot better."
-date: '2024-07-01'
+publishedAt: '2024-07-01'
 tags: ['next', 'app router', 'react']
 ---
 
