--- a/apps/website/content/blog/saas-ui-2-4.mdx
+++ b/apps/website/content/blog/saas-ui-2-4.mdx
@@ -1,8 +1,7 @@
 ---
 title: Saas UI v2.4 is here!
-date: '2023-11-24'
-author: Eelco Wiersma
-avatar: /eelco128.jpg
+publishedAt: '2023-11-24'
+authors: ['eelco']
 description: We got some nifty new components and improvements for you in this release.
 ---
 
