chore: fix radio docs

--- a/apps/website/content/docs/components/radio.mdx
+++ b/apps/website/content/docs/components/radio.mdx
@@ -13,7 +13,7 @@ links:
 ## Anatomy
 
 ```jsx
-import { Radio, RadioGroup } from '@saas-ui/react/radio'
+import { Radio, RadioGroup } from '@saas-ui/react'
 ```
 
 ```jsx
