feat: improve dark mode

--- a/apps/website/content/docs/getting-started/installation.mdx
+++ b/apps/website/content/docs/getting-started/installation.mdx
@@ -38,11 +38,13 @@ To manually set up Saas UI in your project, follow the steps below.
 
 :::steps
 
-### Install `@chakra-ui/react`
+### Install Saas UI
 
 ```bash
-npm i @saas-ui/react@next @chakra-ui/react @emotion/react
+npm i @saas-ui/react@next @emotion/react
 ```
+
+The `@chakra-ui/react` package is not required, it is automatically installed when you install Saas UI, all components are exported from the `@saas-ui/react` package.
 
 ### Setup provider
 
