--- a/apps/website/content/docs/getting-started/introduction.mdx
+++ b/apps/website/content/docs/getting-started/introduction.mdx
@@ -1,19 +1,16 @@
 ---
 title: Introduction
-description: An introduction to Saas UI.
+description: Getting started with Saas UI.
 ---
 
-## Introduction
+Saas UI is an open-source design system for building modern web applications with a native, high-quality feel.
+Inspired by macOS and premium tools like Linear, Attio, and Superhuman, it provides intuitive primitives
+that empower developers to create beautiful, user-friendly interfaces without sacrificing development velocity.
 
-Saas UI is an open-source Design System for building modern web application that have a native and high-quality feel to them.
-Inspired by MacOS and tools like Linear, Attio and Superhuman, it is built with the goal of giving you easy to use primitives
-to build intuitive and beautiful user interfaces without sacrificing development velocity.
-
-Saas UI can be installed as a library using NPM or ejected into your own project for full control and ownership.
+Whether you're building a simple dashboard or a complex enterprise application, Saas UI helps you deliver polished experiences that users love.
 
 ## Sponsors
 
-- [LocalXPose](https://localxpose.com/)
 - [Frank Faubert](https://github.com/ffaubert)
 - [Appulse Software](https://appulse.net/)
 
