fix: semantic tokens

--- a/apps/website/content/docs/components/menu.mdx
+++ b/apps/website/content/docs/components/menu.mdx
@@ -63,6 +63,12 @@ Here's an example of how to create a menu with radio.
 
 <ExampleTabs name="menu-with-radio-items" />
 
+### With Checkbox
+
+Here's an example of how to create a menu with checkbox.
+
+<ExampleTabs name="menu-with-checkbox-items" />
+
 ### Icon and Command
 
 Compose the menu to include icons and commands.
