chore: migrate to pnpm

--- a/apps/website/content/docs/getting-started/introduction.mdx
+++ b/apps/website/content/docs/getting-started/introduction.mdx
@@ -1,9 +1,8 @@
 ---
 title: Introduction
-description: Getting started with Saas UI.
+description: Saas UI is an open-source design system for building modern web applications with a native, high-quality feel.
 ---
 
-Saas UI is an open-source design system for building modern web applications with a native, high-quality feel.
 Inspired by macOS and premium tools like Linear, Attio, and Superhuman, it provides intuitive primitives
 that empower developers to create beautiful, user-friendly interfaces without sacrificing development velocity.
 
