--- a/apps/website/src/pages/docs/core/installation/remix-guide.mdx
+++ b/apps/website/src/pages/docs/core/installation/remix-guide.mdx
@@ -4,6 +4,11 @@ description: A guide for installing Saas UI with Remix projects
 tags: ['remix']
 ---
 
+<Info>
+  These docs are for Chakra UI v2. For v3 docs, please see [Saas UI v3
+  beta](https://beta.saas-ui.dev).
+</Info>
+
 ### 1. Installation
 
 Inside your `Remix` project root directory, install Saas UI by running either
@@ -11,9 +16,9 @@ of the following:
 
 <PackageManagers
   command={{
-    npm: 'npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
-    yarn: 'yarn add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
-    pnpm: 'pnpm add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    npm: 'npm i @saas-ui/react @chakra-ui/react@^2 @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    yarn: 'yarn add @saas-ui/react @chakra-ui/react@^2 @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    pnpm: 'pnpm add @saas-ui/react @chakra-ui/react@^2 @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
   }}
 />
 
