--- a/apps/website/src/pages/docs/core/overview.mdx
+++ b/apps/website/src/pages/docs/core/overview.mdx
@@ -3,6 +3,11 @@ title: Getting started
 description: An advanced component library built on Chakra UI for building high quality SaaS products at speed.
 ---
 
+<Info>
+  These docs are for Chakra UI v2. For v3 docs, please see [Saas UI v3
+  beta](https://beta.saas-ui.dev).
+</Info>
+
 ## Saas UI
 
 `@saas-ui/react` is a growing set of Open Source Chakra UI components licensed under MIT.
