--- a/apps/website/src/pages/docs/core/quickstarts.mdx
+++ b/apps/website/src/pages/docs/core/quickstarts.mdx
@@ -16,11 +16,11 @@ Saas UI is built on top of Chakra UI, before you continue it's recommended to ha
 Inside your React project directory, install Chakra UI if you haven't done so already:
 
 ```bash
-yarn add @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
+yarn add @chakra-ui/react@^2 @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
 ```
 
 ```bash
-npm i @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
+npm i @chakra-ui/react@^2 @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
 ```
 
 Install Saas UI by running this:
