fix: persona avatar variant prop inference

--- a/apps/website/content/docs/(core)/components/(components)/persona.mdx
+++ b/apps/website/content/docs/(core)/components/(components)/persona.mdx
@@ -64,4 +64,30 @@ Use the `outline*` props to add a ring around the avatar
 
 ## Props
 
-<PropTable component="Persona" part="Persona" />
+### Root
+
+<PropTable component="Persona" part="Root" />
+
+### Avatar
+
+<PropTable component="Persona" part="Avatar" />
+
+### PresenceBadge
+
+<PropTable component="Persona" part="PresenceBadge" />
+
+### Details
+
+<PropTable component="Persona" part="Details" />
+
+### Label
+
+<PropTable component="Persona" part="Label" />
+
+### SecondaryLabel
+
+<PropTable component="Persona" part="SecondaryLabel" />
+
+### TertiaryLabel
+
+<PropTable component="Persona" part="TertiaryLabel" />
