fix: heading sizes

--- a/apps/website/content/docs/(core)/components/(typography)/heading.mdx
+++ b/apps/website/content/docs/(core)/components/(typography)/heading.mdx
@@ -8,7 +8,7 @@ description: Used to render semantic HTML heading elements.
 ## Usage
 
 ```js
-import { Heading } from "@chakra-ui/react"
+import { Heading } from '@chakra-ui/react'
 ```
 
 ```jsx
@@ -22,6 +22,8 @@ import { Heading } from "@chakra-ui/react"
 Use the `size` prop to change the size of the heading component.
 
 <ExampleTabs name="heading-with-sizes" />
+
+<ExampleTabs name="heading-with-multi-line" />
 
 ### Highlight
 
