chore: update docs

--- a/apps/website/content/docs/(core)/components/(components)/editable.mdx
+++ b/apps/website/content/docs/(core)/components/(components)/editable.mdx
@@ -42,6 +42,12 @@ Use the `disabled` prop to disable the editable component.
 
 <ExampleTabs name="editable-disabled" />
 
+### Invalid
+
+Use the `invalid` prop to indicate that the editable component is invalid.
+
+<ExampleTabs name="editable-invalid" />
+
 ### TextArea
 
 You can make a text area editable.
