--- a/apps/website/content/docs/(core)/components/(components)/menu.mdx
+++ b/apps/website/content/docs/(core)/components/(components)/menu.mdx
@@ -27,6 +27,12 @@ import { Menu } from '@saas-ui/react/menu'
 
 ## Examples
 
+### Sizes
+
+Use the `size` prop to control the size of the menu. The default size is `md`.
+
+<ExampleTabs name="menu-sizes" />
+
 ### Command
 
 Use the `MenuItemCommand` component to display a command in the menu.
