--- a/apps/website/content/docs/(core)/components/(typography)/mark.mdx
+++ b/apps/website/content/docs/(core)/components/(typography)/mark.mdx
@@ -8,7 +8,7 @@ description: Used to mark text for emphasis.
 ## Usage
 
 ```js
-import { Mark } from "@chakra-ui/react"
+import { Mark } from '@saas-ui/react/mark'
 ```
 
 ```jsx
