--- a/apps/website/content/saas-ui/docs/(core)/components/(components)/tooltip.mdx
+++ b/apps/website/content/saas-ui/docs/(core)/components/(components)/tooltip.mdx
@@ -1,6 +1,7 @@
 ---
 title: Tooltip
-description: Used to display additional information when a user hovers over an element.
+description:
+  Used to display additional information when a user hovers over an element.
 links:
   source: components/tooltip
   storybook: components-tooltip--basic
@@ -29,6 +30,12 @@ import { Tooltip } from '@saas-ui/react/tooltip'
 Use the `showArrow` prop to show an arrow on the tooltip.
 
 <ExampleTabs name="tooltip-with-arrow" />
+
+### Inverted
+
+Use the `variant="inverted"` prop to invert the tooltip color.
+
+<ExampleTabs name="tooltip-with-inverted" />
 
 ### Placement
 
